2007-12-22  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/gailcell.c:
	* modules/other/gail/gailcontainercell.c:
	* modules/other/gail/gailexpander.c:
	* modules/other/gail/gailtextcell.c:
	* modules/other/gail/gailtextview.c:
	* modules/other/gail/gailwindow.c: Fix compile warnings. Bug #504701.

2007-12-22  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/*.c: Include config.h. Bug #504720.

2007-12-22  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/*.c: Use G_DEFINE_TYPE[_WITH_CODE] instead of
	handwritten get_type functions. Bug #504661.

2007-12-23  Xan Lopez  <xan@gnome.org>

	* gtk/gtktreeview.c (gtk_tree_view_build_tree): pass correct argument
	to g_signal_emit for TEST_EXPAND_ROW (GtkTreeIter* vs. GtkTreeIter**).

	Patch by Sadrul Habib Chowdhury (#504804)

2007-12-22  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/Makefile.am: Link to gdk and gtk libs. Bug
	#504645, patch by Li Yuan.

2007-12-22  Christian Persch  <chpe@gnome.org>

	* gdk/x11/gdkscreen-x11.c: (init_randr12): Plug mem leaks. Bug #504886.

2007-12-22  Christian Persch  <chpe@gnome.org>
        
        * modules/other/gail/gail.c:
        * modules/other/gail/gailbutton.c:
        * modules/other/gail/gailcell.c:
        * modules/other/gail/gailcombo.c:
        * modules/other/gail/gailcombo.h:
        * modules/other/gail/gailcombobox.c:
        * modules/other/gail/gailentry.c:
        * modules/other/gail/gailexpander.c:
        * modules/other/gail/gailmenuitem.c:
        * modules/other/gail/gailnotebook.c:
        * modules/other/gail/gailnotebookpage.c:
        * modules/other/gail/gailnotebookpage.h:
        * modules/other/gail/gailoptionmenu.c:
        * modules/other/gail/gailrange.c:
        * modules/other/gail/gailtextview.c:
        * modules/other/gail/gailtreeview.c:
        * modules/other/gail/gailtreeview.h:
        * modules/other/gail/gailwindow.c: Use gdk_threads_add_idle.
        Bug #504571.
