@@ -1,3 +1,11 @@
+2007-12-23  Cody Russell  <bratsche@gnome.org>
+
+	* gdk/win32/gdkevents-win32.c (show_window_recurse): Check that
+	the window is mapped before setting SW_RESTORE or SW_MINIMIZE.
+	Fixes a regression caused by #164537 patch where transient
+	windows that are hidden get shown (incorrectly) when their
+	parents are minimized. (#504984)
+	
 2007-12-22  Christian Persch  <chpe@gnome.org>
 
 	* modules/other/gail/gailcell.c:
